--- a/web/themes/custom/provus_bootstrap/scss/components/_banner.scss
+++ b/web/themes/custom/provus_bootstrap/scss/components/_banner.scss
@@ -58,8 +58,7 @@
   @include breakout;
 
   padding: rem-calc(102 0);
-  background-size: cover !important;
-  height: rem-calc(584);
+  height: auto;
 
   &.banner-color {
     &-light {
@@ -97,11 +96,53 @@
     background-size: 45% 100% !important;
     background-position: right !important;
   }
+  &.image-left,
+  &.image-right {
+    .banner-inner {
+      img {
+        width: 100%;
+      }
+    }
+  }
+  &.image-full {
+    .banner-inner {
+      .banner-content {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        h1, p, .subheading {
+          color: $white;
+          text-shadow: 0 0 rem-calc(8) $black, 0 0 rem-calc(20) $black;
+        }
+      }
+      .banner-img {
+        position: relative;
+        left: 0;
+        width: 100vw;
+        height: auto;
+        .field--type-entity-reference {
+          margin: 0;
+          picture {
+            width: 100%;
+            display: block;
+          }
+          img {
+            margin: 0;
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  .container .container {
+    padding: 0;
+  }
   .banner-inner {
-    display: flex;
     height: 100%;
     align-items: center;
     .banner-content {
+      padding: rem-calc(50 0);
       .banner-title {
         @include text-style-display-headline-display;
         height: max-content;
@@ -110,9 +151,9 @@
         @include text-style-subheadline-sub-1;
         height: max-content;
       }
-      h1, p, .subheading {
-        color: $white;
-        text-shadow: 0 0 rem-calc(8) $black, 0 0 rem-calc(20) $black;
+      .subheading {
+        @include text-style-eyebrow-eyebrow-1();
+        color: $secondary-shade;
       }
       h1 {
         margin-bottom: rem-calc(30);
